--- a/moldingApp/index.html
+++ b/moldingApp/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Daher App</title>
 
-  <base href="./">
+  <base href="">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -25,7 +25,7 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.f784177378f43507.js" type="module"></script><script src="polyfills.8a98a597f426b6b1.js" type="module"></script><script src="main.e61f50b18edbca8c.js" type="module"></script>
+<script src="runtime.4d47312bf8a03faf.js" type="module"></script><script src="polyfills.8a98a597f426b6b1.js" type="module"></script><script src="main.e61f50b18edbca8c.js" type="module"></script>
 
 
 </body></html>
