--- a/moldingApp/index.html
+++ b/moldingApp/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Daher App</title>
 
-  <base href="./">
+  <base href="/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -27,7 +27,7 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.a42d13d194a433a4.js" type="module"></script><script src="polyfills.a20780bee94baa08.js" type="module"></script><script src="main.eab4da4f53aa9610.js" type="module"></script>
+<script src="runtime.ff0aa30d6998b263.js" type="module"></script><script src="polyfills.a20780bee94baa08.js" type="module"></script><script src="main.89d096d409cc172b.js" type="module"></script>
 
 
 </body></html>
